
    HADOOP-10431. Change visibility of KeyStore.Options getter methods to public. (tucu)

    HADOOP-10583. bin/hadoop key throws NPE with no args and assorted other fixups. (clamb via tucu)

    HADOOP-10586. KeyShell doesn't allow setting Options via CLI. (clamb via tucu)

    HADOOP-10625. Trim configuration names when putting/getting them
    to properties. (Wangda Tan via xgong)

  OPTIMIZATIONS

    HADOOP-7761. Improve the performance of raw comparisons. (todd)

    HADOOP-8589. ViewFs tests fail when tests and home dirs are nested (sanjay Radia)

  BREAKDOWN OF HADOOP-10514 SUBTASKS AND RELATED JIRAS

    HADOOP-10520. Extended attributes definition and FileSystem APIs for
    extended attributes. (Yi Liu via wang)

    HADOOP-10546. Javadoc and other small fixes for extended attributes in
    hadoop-common. (Charles Lamb via wang)

    HADOOP-10521. FsShell commands for extended attributes. (Yi Liu via wang)

    HADOOP-10548. Improve FsShell xattr error handling and other fixes. (Charles Lamb via umamahesh)

    HADOOP-10567. Shift XAttr value encoding code out for reuse. (Yi Liu via umamahesh)

    HADOOP-10621. Remove CRLF for xattr value base64 encoding for better display.(Yi Liu via umamahesh)

    HADOOP-10575. Small fixes for XAttrCommands and test. (Yi Liu via umamahesh)

Release 2.5.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

  IMPROVEMENTS

    HADOOP-10451. Remove unused field and imports from SaslRpcServer.
    (Benoy Antony via jing9)

    HADOOP-10345. Sanitize the the inputs (groups and hosts) for the proxyuser
    configuration. (Benoy Antony via jing9)

    HADOOP-10454. Provide FileContext version of har file system. (Kihwal Lee
    via jeagles)

    HADOOP-10104. Update jackson to 1.9.13 (Akira Ajisaka via stevel)

    HADOOP-10503. Move junit up to v 4.11. (cnauroth)

    HADOOP-10535. Make the retry numbers in ActiveStandbyElector configurable.
    (jing9)
